--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,23 +8,18 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <RelativeLayout
+            android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iconInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_dialog_alert" />
 
             <TextView
                 android:id="@+id/winTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/iconInfo"
                 android:text="Hello"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -33,20 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/winTitle"
-                android:layout_toEndOf="@id/iconInfo"
                 android:text="Magnitude" />
-
-            <Button
-                android:id="@+id/btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/magnitude"
-                android:layout_marginLeft="6dp"
-                android:layout_toEndOf="@id/magnitude"
-                android:background="@android:color/transparent"
-                android:padding="8dp"
-                android:text="More info..."
-                android:textColor="@color/colorAccent" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
