--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -136,6 +136,7 @@
                 app:layout_constraintTop_toBottomOf="@id/radio_group_type" />
 
             <RadioGroup
+                android:id="@+id/radio_group_time_period"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
