--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -45,8 +45,7 @@
                     android:layout_below="@id/pop_title"
                     android:layout_marginTop="8dp"
                     android:text="Coordinates: vrey ;arge number"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/pop_magnitude"
@@ -55,8 +54,7 @@
                     android:layout_below="@id/pop_lat_lon"
                     android:layout_marginTop="8dp"
                     android:text="Magnitude: 3.14"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/pop_date"
@@ -65,8 +63,7 @@
                     android:layout_below="@id/pop_magnitude"
                     android:layout_marginTop="8dp"
                     android:text="Date: 24.03.2020"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/pop_list_title"
