Only EarthquakeDetail to be done!

--- a/app/src/main/res/layout/activity_quakes_list.xml
+++ b/app/src/main/res/layout/activity_quakes_list.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.QuakesListActivity">
+    tools:context=".Activities.QuakesListActivity"
+    android:background="@color/colorPrimaryDark">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/action_bar_quakes_list"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:elevation="4dp"
+        android:elevation="8dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:title="Earthquake List" />
 
