--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="green">#64DD17</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="orange">#F57C00</color>
+    <color name="red">#D50000</color>
 </resources>
