--- a/app/src/main/res/layout/activity_quakes_list.xml
+++ b/app/src/main/res/layout/activity_quakes_list.xml
@@ -21,6 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/action_bar_quakes_list"
-        android:layout_margin="8dp"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:layout_marginBottom="4dp"/>
 </RelativeLayout>
